# PM-Accelerator-Weather-App

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  render.yaml
.github/workflows/: backend-CD.yml  backend-CI.yml  backend-bypass.yml  backend.yml  frontend.yml
backend/: .dockerignore  .gitignore  .pyre_configuration.local  Dockerfile  README.md  conftest.py  db.sqlite3  manage.py  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: admin.py  common.py  dev.py  prod.py
backend/core/: exceptions.py
backend/core/tests/: test_exceptions.py
backend/static/css/: admin_custom.css
backend/templates/: home.html
backend/weather/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/weather/agent/: orchestrator.py  prompts.py  tools.py
backend/weather/management/commands/: seed_locations.py
backend/weather/migrations/: 0001_initial.py  0002_remove_weatherrecord_raw_response.py
backend/weather/services/: exports.py  geocoding.py  google_maps.py  openweather.py  vector_search.py  youtube.py
backend/weather/tests/: conftest.py  test_models.py  test_serializers.py  test_services.py  test_validators.py  test_views.py
